--- a/styles.css
+++ b/styles.css
@@ -59,11 +59,12 @@ body {
           flex-direction: column;
   font-family: "Poppins", sans-serif;
   text-align: center;
-  padding: 20px;
+  margin: 0 0 40px 0;
 }
 
 @media (min-width: 1024px) {
   .container .left {
+    padding: 20px;
     width: 50%;
     text-align: left;
   }
@@ -72,11 +73,27 @@ body {
 .container .left h1 {
   font-weight: 700;
   color: white;
+  width: 100%;
+}
+
+@media (min-width: 1024px) {
+  .container .left h1 {
+    font-size: 46px;
+    max-width: 400px;
+  }
 }
 
 .container .left p {
   font-weight: 500;
   color: white;
+  width: 100%;
+  margin: 0;
+}
+
+@media (min-width: 1024px) {
+  .container .left p {
+    max-width: 500px;
+  }
 }
 
 .container .right {
@@ -141,7 +158,7 @@ body {
 
 .container .right .form .form-control > input:focus {
   outline: none;
-  border: 2px solid #b9b6d3;
+  border: 1px solid #3e3c49;
 }
 
 .container .right .form .form-control > input::-webkit-input-placeholder {
@@ -238,5 +255,9 @@ body {
   font-weight: 600;
   color: #ff7a7a;
   text-decoration: none;
+}
+
+footer {
+  margin: 100px 0 0 0;
 }
 /*# sourceMappingURL=styles.css.map */
