--- a/styles.scss
+++ b/styles.scss
@@ -49,9 +49,10 @@ body {
         flex-direction: column;
         font-family: $primary-font;
         text-align: center;
-        padding: 20px;
+        margin: 0 0 40px 0;
 
         @media (min-width: 1024px) {
+            padding: 20px;
             width: 50%;
             text-align: left;
         }
@@ -59,11 +60,23 @@ body {
         h1 {
             font-weight: 700;
             color: white;
+            width: 100%;
+            
+            @media (min-width: 1024px) {
+                font-size: 46px;
+                max-width: 400px;
+            }
         }
 
         p {
             font-weight: 500;
             color: white;
+            width: 100%;
+            margin: 0;
+
+            @media (min-width: 1024px) {
+                max-width: 500px;
+            }
         }
     }
 
@@ -118,7 +131,7 @@ body {
 
             .form-control > input:focus {
                 outline: none;
-                border: 2px solid $netural-grayish-blue;
+                border: 1px solid $neutral-dark-blue;
             }
 
             .form-control > input::placeholder {
@@ -203,4 +216,8 @@ body {
             }
         }
     }
+}
+
+footer {
+    margin: 100px 0 0 0;
 }
