--- a/styles.scss
+++ b/styles.scss
@@ -101,6 +101,10 @@ body {
                 text-align: center;
                 margin: 30px 50px;
                 color: $netural-grayish-blue;
+
+                @media (min-width:1024px) {
+                    margin: 15px 50px;
+                }
             }
 
             span {
@@ -113,6 +117,10 @@ body {
             padding: 20px;
             background: white;
             border-radius: 8px;
+
+            @media (min-width:1024px) {
+                padding: 40px;
+            }
 
             .form-control {
                 margin: 0 20px 20px 0;
@@ -182,13 +190,14 @@ body {
                 border-radius: 8px;
                 box-shadow: 0 5px 0 hsl(154, 63%, 38%);
                 width: 100%;
-                padding: 20px;
+                padding: 20px 0;
                 background: $primary-green;
                 color: white;
                 font-family: $primary-font;
                 font-weight: 600;
                 text-transform: uppercase;
                 letter-spacing: 1px; 
+                font-size: 16px;
                 cursor: pointer;
             }
 
@@ -205,7 +214,7 @@ body {
                 font-family: $primary-font;
                 font-weight: 400;
                 text-align: center;
-                font-size: 13px;
+                font-size: 12px;
                 color: $netural-grayish-blue;
             }
 
