--- a/styles.css
+++ b/styles.css
@@ -1,276 +1,281 @@
-.attribution {
-  font-size: 11px;
-  text-align: center;
-  font-family: "Poppins", sans-serif;
-}
-
-.attribution a {
-  text-decoration: none;
-  font-weight: 600;
-  color: #6055a5;
-}
-
-.attribution a:hover {
-  text-decoration: underline;
-}
-
 body {
-  background: url("images/bg-intro-mobile.png");
-  background-color: #ff7a7a;
-  margin: auto;
+    background: url("images/bg-intro-mobile.png");
+    background-color: #ff7a7a;
+    margin: 0;
 }
 
-@media (min-width: 1024px) {
-  body {
-    margin: 100px;
-  }
+.main-container {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
 }
 
 .container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  padding: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 20px;
 }
 
 @media (min-width: 1024px) {
-  .container {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
+    .container {
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+    }
 }
 
 .container .left {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  font-family: "Poppins", sans-serif;
-  text-align: center;
-  margin: 0 0 40px 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    font-family: "Poppins", sans-serif;
+    text-align: center;
+    margin: 0 0 40px 0;
 }
 
 @media (min-width: 1024px) {
-  .container .left {
-    padding: 20px;
-    width: 50%;
-    text-align: left;
-  }
+    .container .left {
+        padding: 20px;
+        width: 50%;
+        text-align: left;
+    }
 }
 
 .container .left h1 {
-  font-weight: 700;
-  color: white;
-  width: 100%;
+    font-weight: 700;
+    color: white;
+    width: 100%;
 }
 
 @media (min-width: 1024px) {
-  .container .left h1 {
-    font-size: 46px;
-    max-width: 400px;
-  }
+    .container .left h1 {
+        font-size: 46px;
+        max-width: 400px;
+    }
 }
 
 .container .left p {
-  font-weight: 500;
-  color: white;
-  width: 100%;
-  margin: 0;
+    font-weight: 500;
+    color: white;
+    width: 100%;
+    margin: 0;
 }
 
 @media (min-width: 1024px) {
-  .container .left p {
-    max-width: 500px;
-  }
+    .container .left p {
+        max-width: 500px;
+    }
 }
 
 .container .right {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-shadow: 0 8px 0 rgba(196, 104, 104, 0.685);
-          box-shadow: 0 8px 0 rgba(196, 104, 104, 0.685);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-shadow: 0 8px 0 rgba(196, 104, 104, 0.685);
+            box-shadow: 0 8px 0 rgba(196, 104, 104, 0.685);
 }
 
 @media (min-width: 1024px) {
-  .container .right {
-    width: 50%;
-  }
+    .container .right {
+        width: 50%;
+    }
 }
 
 .container .right .trial {
-  background-color: #6055a5;
-  border-radius: 10px;
-  font-family: "Poppins", sans-serif;
-  font-size: 16px;
-  margin: 0 0 30px 0;
-  -webkit-box-shadow: 0 8px 0 rgba(196, 104, 104, 0.685);
-          box-shadow: 0 8px 0 rgba(196, 104, 104, 0.685);
+    background-color: #6055a5;
+    border-radius: 10px;
+    font-family: "Poppins", sans-serif;
+    font-size: 16px;
+    margin: 0 0 30px 0;
+    -webkit-box-shadow: 0 8px 0 rgba(196, 104, 104, 0.685);
+            box-shadow: 0 8px 0 rgba(196, 104, 104, 0.685);
 }
 
 .container .right .trial p {
-  text-align: center;
-  margin: 30px 50px;
-  color: #b9b6d3;
+    text-align: center;
+    margin: 30px 50px;
+    color: #b9b6d3;
 }
 
 @media (min-width: 1024px) {
-  .container .right .trial p {
-    margin: 15px 50px;
-  }
+    .container .right .trial p {
+        margin: 15px 50px;
+    }
 }
 
 .container .right .trial span {
-  font-weight: 500;
-  color: white;
+    font-weight: 500;
+    color: white;
 }
 
 .container .right .form {
-  padding: 20px;
-  background: white;
-  border-radius: 8px;
+    padding: 20px;
+    background: white;
+    border-radius: 8px;
 }
 
 @media (min-width: 1024px) {
-  .container .right .form {
-    padding: 40px;
-  }
+    .container .right .form {
+        padding: 40px;
+    }
 }
 
 .container .right .form .form-control {
-  margin: 0 20px 20px 0;
-  position: relative;
+    margin: 0 20px 20px 0;
+    position: relative;
 }
 
 .container .right .form .form-control > input {
-  border-radius: 8px;
-  width: 100%;
-  padding: 20px 10px;
-  border: 1px solid #b9b6d3;
-  font-family: "Poppins", sans-serif;
-  font-weight: 600;
-  color: #3e3c49;
+    border-radius: 8px;
+    width: 100%;
+    padding: 20px 10px;
+    border: 1px solid #b9b6d3;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    color: #3e3c49;
 }
 
 .container .right .form .form-control > input:focus {
-  outline: none;
-  border: 1px solid #3e3c49;
+    outline: none;
+    border: 1px solid #3e3c49;
 }
 
 .container .right .form .form-control > input::-webkit-input-placeholder {
-  font-weight: 600;
+    font-weight: 600;
 }
 
 .container .right .form .form-control > input:-ms-input-placeholder {
-  font-weight: 600;
+    font-weight: 600;
 }
 
 .container .right .form .form-control > input::-ms-input-placeholder {
-  font-weight: 600;
+    font-weight: 600;
 }
 
 .container .right .form .form-control > input::placeholder {
-  font-weight: 600;
+    font-weight: 600;
 }
 
 .container .right .form .form-control.success > input {
-  border-color: #38cc8c;
+    border-color: #38cc8c;
 }
 
 .container .right .form .form-control.error > input {
-  border-color: #ff7a7a;
+    border-color: #ff7a7a;
 }
 
 .container .right .form .form-control > i {
-  position: absolute;
-  top: 24px;
-  right: -2px;
-  visibility: hidden;
+    position: absolute;
+    top: 24px;
+    right: -2px;
+    visibility: hidden;
 }
 
 .container .right .form .form-control.success > i.fa-check-circle {
-  visibility: visible;
-  color: #38cc8c;
+    visibility: visible;
+    color: #38cc8c;
 }
 
 .container .right .form .form-control.error > i.fa-exclamation-circle {
-  visibility: visible;
-  color: #ff7a7a;
+    visibility: visible;
+    color: #ff7a7a;
 }
 
 .container .right .form .form-control > small {
-  position: absolute;
-  bottom: -18px;
-  left: 6px;
-  visibility: hidden;
+    position: absolute;
+    bottom: -18px;
+    left: 6px;
+    visibility: hidden;
 }
 
 .container .right .form .form-control.error > small {
-  visibility: visible;
-  color: #ff7a7a;
-  font-family: "Poppins", sans-serif;
-  font-size: 11px;
+    visibility: visible;
+    color: #ff7a7a;
+    font-family: "Poppins", sans-serif;
+    font-size: 11px;
 }
 
 .container .right .form button {
-  border: none;
-  border-radius: 8px;
-  -webkit-box-shadow: 0 5px 0 #249e69;
-          box-shadow: 0 5px 0 #249e69;
-  width: 100%;
-  padding: 20px 0;
-  background: #38cc8c;
-  color: white;
-  font-family: "Poppins", sans-serif;
-  font-weight: 600;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  font-size: 16px;
-  cursor: pointer;
+    border: none;
+    border-radius: 8px;
+    -webkit-box-shadow: 0 5px 0 #249e69;
+            box-shadow: 0 5px 0 #249e69;
+    width: 100%;
+    padding: 20px 0;
+    background: #38cc8c;
+    color: white;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-size: 16px;
+    cursor: pointer;
 }
 
 .container .right .form button:active {
-  -webkit-box-shadow: 0 3px 0 #249e69;
-          box-shadow: 0 3px 0 #249e69;
-  -webkit-transform: translateY(4px);
-          transform: translateY(4px);
+    -webkit-box-shadow: 0 3px 0 #249e69;
+            box-shadow: 0 3px 0 #249e69;
+    -webkit-transform: translateY(4px);
+            transform: translateY(4px);
 }
 
 .container .right .form button:focus {
-  outline: none;
+    outline: none;
 }
 
 .container .right .form p {
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  text-align: center;
-  font-size: 12px;
-  color: #b9b6d3;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    text-align: center;
+    font-size: 12px;
+    color: #b9b6d3;
 }
 
 .container .right .form a {
-  font-weight: 600;
-  color: #ff7a7a;
-  text-decoration: none;
+    font-weight: 600;
+    color: #ff7a7a;
+    text-decoration: none;
 }
 
-footer {
-  margin: 100px 0 0 0;
+@media (min-width: 1024px) {
+  footer {
+    position: fixed;
+    bottom: 0;
+  }
+}
+
+.attribution {
+    font-size: 11px;
+    text-align: center;
+    font-family: "Poppins", sans-serif;
+}
+
+.attribution a {
+    text-decoration: none;
+    font-weight: 600;
+    color: #6055a5;
+}
+
+.attribution a:hover {
+    text-decoration: underline;
 }
 /*# sourceMappingURL=styles.css.map */
